syntax = "proto3";
package user;

option go_package = "/protobuf";

message Error {
  string hostID = 1;
  string userID = 2;
  string title = 3;
  string detail = 4;
  int64 date = 5;
}